--- a/src/input.css
+++ b/src/input.css
@@ -18,3 +18,6 @@
 .nav-list-item {
   @apply text-sm font-medium text-[#222222] hover:font-bold;
 }
+.btn {
+  @apply w-[160px] h-[44px] rounded-full font-primary text-white leading-6 uppercase bg-[#DD3142] shadow-md;
+}
