--- a/src/output.css
+++ b/src/output.css
@@ -7,6 +7,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-white: #fff;
     --spacing: 0.25rem;
     --text-xs: 0.75rem;
@@ -15,6 +16,8 @@
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
     --text-base--line-height: calc(1.5 / 1);
+    --text-3xl: 1.875rem;
+    --text-3xl--line-height: calc(2.25 / 1.875);
     --font-weight-light: 300;
     --font-weight-medium: 500;
     --font-weight-bold: 700;
@@ -187,6 +190,9 @@
   .-bottom-0 {
     bottom: calc(var(--spacing) * -0);
   }
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
+  }
   .-left-\[270px\] {
     left: calc(270px * -1);
   }
@@ -226,6 +232,9 @@
   .mt-\[31px\] {
     margin-top: 31px;
   }
+  .mt-\[33px\] {
+    margin-top: 33px;
+  }
   .mt-\[48px\] {
     margin-top: 48px;
   }
@@ -238,6 +247,9 @@
   .flex {
     display: flex;
   }
+  .grid {
+    display: grid;
+  }
   .table {
     display: table;
   }
@@ -247,11 +259,20 @@
   .h-0\.5 {
     height: calc(var(--spacing) * 0.5);
   }
+  .h-\[15px\] {
+    height: 15px;
+  }
   .h-\[32px\] {
     height: 32px;
   }
   .h-\[60px\] {
     height: 60px;
+  }
+  .h-\[78px\] {
+    height: 78px;
+  }
+  .h-\[255px\] {
+    height: 255px;
   }
   .h-\[293px\] {
     height: 293px;
@@ -262,23 +283,35 @@
   .h-\[341px\] {
     height: 341px;
   }
+  .h-\[368px\] {
+    height: 368px;
+  }
   .h-\[407px\] {
     height: 407px;
   }
   .h-\[436px\] {
     height: 436px;
   }
-  .max-h-\[389px\] {
-    max-height: 389px;
-  }
   .w-0 {
     width: calc(var(--spacing) * 0);
+  }
+  .w-\[15px\] {
+    width: 15px;
   }
   .w-\[115px\] {
     width: 115px;
   }
+  .w-\[210px\] {
+    width: 210px;
+  }
+  .w-\[218px\] {
+    width: 218px;
+  }
   .w-\[237px\] {
     width: 237px;
+  }
+  .w-\[262px\] {
+    width: 262px;
   }
   .w-\[302px\] {
     width: 302px;
@@ -301,11 +334,17 @@
   .max-w-\[432px\] {
     max-width: 432px;
   }
+  .max-w-\[983px\] {
+    max-width: 983px;
+  }
   .border-collapse {
     border-collapse: collapse;
   }
   .resize {
     resize: both;
+  }
+  .grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
   .flex-col {
     flex-direction: column;
@@ -319,11 +358,23 @@
   .justify-center {
     justify-content: center;
   }
+  .gap-2 {
+    gap: calc(var(--spacing) * 2);
+  }
+  .gap-2\.5 {
+    gap: calc(var(--spacing) * 2.5);
+  }
   .gap-30 {
     gap: calc(var(--spacing) * 30);
   }
   .gap-\[36px\] {
     gap: 36px;
+  }
+  .gap-x-\[168px\] {
+    column-gap: 168px;
+  }
+  .gap-y-\[29px\] {
+    row-gap: 29px;
   }
   .rounded-md {
     border-radius: var(--radius-md);
@@ -337,6 +388,9 @@
   }
   .bg-\[\#FFFFFF\] {
     background-color: #FFFFFF;
+  }
+  .bg-amber-300 {
+    background-color: var(--color-amber-300);
   }
   .bg-white {
     background-color: var(--color-white);
@@ -356,6 +410,9 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
+  .py-\[16px\] {
+    padding-block: 16px;
+  }
   .py-\[38px\] {
     padding-block: 38px;
   }
@@ -368,8 +425,17 @@
   .pt-\[41px\] {
     padding-top: 41px;
   }
+  .pt-\[63px\] {
+    padding-top: 63px;
+  }
+  .pt-\[87px\] {
+    padding-top: 87px;
+  }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
+  }
+  .pb-\[66px\] {
+    padding-bottom: 66px;
   }
   .pl-\[49px\] {
     padding-left: 49px;
@@ -379,6 +445,10 @@
   }
   .font-hero {
     font-family: var(--font-hero);
+  }
+  .text-3xl {
+    font-size: var(--text-3xl);
+    line-height: var(--tw-leading, var(--text-3xl--line-height));
   }
   .text-base {
     font-size: var(--text-base);
@@ -416,6 +486,10 @@
     --tw-leading: calc(var(--spacing) * 14);
     line-height: calc(var(--spacing) * 14);
   }
+  .leading-\[133\%\] {
+    --tw-leading: 133%;
+    line-height: 133%;
+  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
@@ -435,6 +509,12 @@
   .tracking-tighter {
     --tw-tracking: var(--tracking-tighter);
     letter-spacing: var(--tracking-tighter);
+  }
+  .text-\[\#0E0E0E\] {
+    color: #0E0E0E;
+  }
+  .text-\[\#6D6D6D\] {
+    color: #6D6D6D;
   }
   .text-white {
     color: var(--color-white);
