--- a/src/output.css
+++ b/src/output.css
@@ -8,6 +8,7 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-amber-300: oklch(87.9% 0.169 91.605);
+    --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --text-xs: 0.75rem;
@@ -16,6 +17,8 @@
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
     --text-base--line-height: calc(1.5 / 1);
+    --text-xl: 1.25rem;
+    --text-xl--line-height: calc(1.75 / 1.25);
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
     --font-weight-light: 300;
@@ -23,6 +26,7 @@
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
     --tracking-tighter: -0.05em;
+    --radius-sm: 0.25rem;
     --radius-md: 0.375rem;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -190,6 +194,9 @@
   .-bottom-0 {
     bottom: calc(var(--spacing) * -0);
   }
+  .-bottom-10 {
+    bottom: calc(var(--spacing) * -10);
+  }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
@@ -226,6 +233,9 @@
   .my-\[76px\] {
     margin-block: 76px;
   }
+  .-mt-\[10px\] {
+    margin-top: calc(10px * -1);
+  }
   .mt-\[7px\] {
     margin-top: 7px;
   }
@@ -235,6 +245,9 @@
   .mt-\[33px\] {
     margin-top: 33px;
   }
+  .mt-\[45px\] {
+    margin-top: 45px;
+  }
   .mt-\[48px\] {
     margin-top: 48px;
   }
@@ -243,6 +256,24 @@
   }
   .mt-\[153px\] {
     margin-top: 153px;
+  }
+  .-mb-3 {
+    margin-bottom: calc(var(--spacing) * -3);
+  }
+  .-mb-6 {
+    margin-bottom: calc(var(--spacing) * -6);
+  }
+  .-mb-7 {
+    margin-bottom: calc(var(--spacing) * -7);
+  }
+  .-ml-6 {
+    margin-left: calc(var(--spacing) * -6);
+  }
+  .-ml-\[10px\] {
+    margin-left: calc(10px * -1);
+  }
+  .-ml-\[20px\] {
+    margin-left: calc(20px * -1);
   }
   .flex {
     display: flex;
@@ -259,17 +290,32 @@
   .h-0\.5 {
     height: calc(var(--spacing) * 0.5);
   }
+  .h-1 {
+    height: calc(var(--spacing) * 1);
+  }
+  .h-\[1px\] {
+    height: 1px;
+  }
+  .h-\[2px\] {
+    height: 2px;
+  }
   .h-\[15px\] {
     height: 15px;
   }
   .h-\[32px\] {
     height: 32px;
   }
+  .h-\[50px\] {
+    height: 50px;
+  }
   .h-\[60px\] {
     height: 60px;
   }
   .h-\[78px\] {
     height: 78px;
+  }
+  .h-\[132px\] {
+    height: 132px;
   }
   .h-\[255px\] {
     height: 255px;
@@ -298,14 +344,14 @@
   .w-\[15px\] {
     width: 15px;
   }
+  .w-\[68px\] {
+    width: 68px;
+  }
   .w-\[115px\] {
     width: 115px;
   }
   .w-\[210px\] {
     width: 210px;
-  }
-  .w-\[218px\] {
-    width: 218px;
   }
   .w-\[237px\] {
     width: 237px;
@@ -315,6 +361,9 @@
   }
   .w-\[302px\] {
     width: 302px;
+  }
+  .w-\[332px\] {
+    width: 332px;
   }
   .w-\[390px\] {
     width: 390px;
@@ -328,6 +377,30 @@
   .w-\[630px\] {
     width: 630px;
   }
+  .w-full {
+    width: 100%;
+  }
+  .max-w-\[149px\] {
+    max-width: 149px;
+  }
+  .max-w-\[151px\] {
+    max-width: 151px;
+  }
+  .max-w-\[218px\] {
+    max-width: 218px;
+  }
+  .max-w-\[228px\] {
+    max-width: 228px;
+  }
+  .max-w-\[260px\] {
+    max-width: 260px;
+  }
+  .max-w-\[330px\] {
+    max-width: 330px;
+  }
+  .max-w-\[362px\] {
+    max-width: 362px;
+  }
   .max-w-\[366px\] {
     max-width: 366px;
   }
@@ -336,6 +409,9 @@
   }
   .max-w-\[983px\] {
     max-width: 983px;
+  }
+  .max-w-\[px\] {
+    max-width: px;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -349,8 +425,14 @@
   .flex-col {
     flex-direction: column;
   }
+  .items-baseline {
+    align-items: baseline;
+  }
   .items-center {
     align-items: center;
+  }
+  .items-start {
+    align-items: flex-start;
   }
   .justify-between {
     justify-content: space-between;
@@ -363,6 +445,24 @@
   }
   .gap-2\.5 {
     gap: calc(var(--spacing) * 2.5);
+  }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
+  }
+  .gap-5 {
+    gap: calc(var(--spacing) * 5);
+  }
+  .gap-8 {
+    gap: calc(var(--spacing) * 8);
+  }
+  .gap-10 {
+    gap: calc(var(--spacing) * 10);
+  }
+  .gap-15 {
+    gap: calc(var(--spacing) * 15);
+  }
+  .gap-20 {
+    gap: calc(var(--spacing) * 20);
   }
   .gap-30 {
     gap: calc(var(--spacing) * 30);
@@ -379,6 +479,9 @@
   .rounded-md {
     border-radius: var(--radius-md);
   }
+  .rounded-sm {
+    border-radius: var(--radius-sm);
+  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
@@ -389,8 +492,8 @@
   .bg-\[\#FFFFFF\] {
     background-color: #FFFFFF;
   }
-  .bg-amber-300 {
-    background-color: var(--color-amber-300);
+  .bg-black {
+    background-color: var(--color-black);
   }
   .bg-white {
     background-color: var(--color-white);
@@ -407,11 +510,20 @@
   .p-3 {
     padding: calc(var(--spacing) * 3);
   }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
+  }
+  .py-2\.5 {
+    padding-block: calc(var(--spacing) * 2.5);
+  }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
   .py-\[16px\] {
     padding-block: 16px;
+  }
+  .py-\[31px\] {
+    padding-block: 31px;
   }
   .py-\[38px\] {
     padding-block: 38px;
@@ -419,14 +531,56 @@
   .py-\[56px\] {
     padding-block: 56px;
   }
+  .pt-2 {
+    padding-top: calc(var(--spacing) * 2);
+  }
+  .pt-2\.5 {
+    padding-top: calc(var(--spacing) * 2.5);
+  }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
+  }
+  .pt-\[6\] {
+    padding-top: 6;
+  }
+  .pt-\[9px\] {
+    padding-top: 9px;
+  }
+  .pt-\[10px\] {
+    padding-top: 10px;
+  }
+  .pt-\[18px\] {
+    padding-top: 18px;
+  }
+  .pt-\[20px\] {
+    padding-top: 20px;
+  }
+  .pt-\[22px\] {
+    padding-top: 22px;
+  }
+  .pt-\[25px\] {
+    padding-top: 25px;
+  }
+  .pt-\[27px\] {
+    padding-top: 27px;
+  }
+  .pt-\[30px\] {
+    padding-top: 30px;
+  }
+  .pt-\[40px\] {
+    padding-top: 40px;
   }
   .pt-\[41px\] {
     padding-top: 41px;
   }
+  .pt-\[43px\] {
+    padding-top: 43px;
+  }
   .pt-\[63px\] {
     padding-top: 63px;
+  }
+  .pt-\[67px\] {
+    padding-top: 67px;
   }
   .pt-\[87px\] {
     padding-top: 87px;
@@ -434,14 +588,32 @@
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
   }
+  .pb-\[7px\] {
+    padding-bottom: 7px;
+  }
+  .pb-\[10px\] {
+    padding-bottom: 10px;
+  }
+  .pb-\[12px\] {
+    padding-bottom: 12px;
+  }
+  .pb-\[50px\] {
+    padding-bottom: 50px;
+  }
   .pb-\[66px\] {
     padding-bottom: 66px;
+  }
+  .pb-\[67px\] {
+    padding-bottom: 67px;
   }
   .pl-\[49px\] {
     padding-left: 49px;
   }
   .text-center {
     text-align: center;
+  }
+  .text-left {
+    text-align: left;
   }
   .font-hero {
     font-family: var(--font-hero);
@@ -458,12 +630,25 @@
     font-size: var(--text-sm);
     line-height: var(--tw-leading, var(--text-sm--line-height));
   }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
+  }
   .text-xs {
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
   }
+  .text-\[8px\] {
+    font-size: 8px;
+  }
+  .text-\[10px\] {
+    font-size: 10px;
+  }
   .text-\[12px\] {
     font-size: 12px;
+  }
+  .text-\[18px\] {
+    font-size: 18px;
   }
   .text-\[30px\] {
     font-size: 30px;
@@ -515,6 +700,9 @@
   }
   .text-\[\#6D6D6D\] {
     color: #6D6D6D;
+  }
+  .text-\[\#DD3142\] {
+    color: #DD3142;
   }
   .text-white {
     color: var(--color-white);
