--- a/src/output.css
+++ b/src/output.css
@@ -7,7 +7,6 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -25,6 +24,7 @@
     --font-weight-medium: 500;
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
+    --font-weight-black: 900;
     --tracking-tighter: -0.05em;
     --radius-sm: 0.25rem;
     --radius-md: 0.375rem;
@@ -188,6 +188,15 @@
   .relative {
     position: relative;
   }
+  .inset-0 {
+    inset: calc(var(--spacing) * 0);
+  }
+  .top-1 {
+    top: calc(var(--spacing) * 1);
+  }
+  .top-1\/2 {
+    top: calc(1/2 * 100%);
+  }
   .top-14 {
     top: calc(var(--spacing) * 14);
   }
@@ -197,14 +206,23 @@
   .-bottom-10 {
     bottom: calc(var(--spacing) * -10);
   }
-  .bottom-0 {
-    bottom: calc(var(--spacing) * 0);
-  }
   .-left-\[270px\] {
     left: calc(270px * -1);
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
+  }
+  .left-1 {
+    left: calc(var(--spacing) * 1);
+  }
+  .left-1\/2 {
+    left: calc(1/2 * 100%);
+  }
+  .left-125 {
+    left: calc(var(--spacing) * 125);
+  }
+  .left-auto {
+    left: auto;
   }
   .z-10 {
     z-index: 10;
@@ -257,12 +275,6 @@
   .mt-\[153px\] {
     margin-top: 153px;
   }
-  .-mb-3 {
-    margin-bottom: calc(var(--spacing) * -3);
-  }
-  .-mb-6 {
-    margin-bottom: calc(var(--spacing) * -6);
-  }
   .-mb-7 {
     margin-bottom: calc(var(--spacing) * -7);
   }
@@ -271,9 +283,6 @@
   }
   .-ml-\[10px\] {
     margin-left: calc(10px * -1);
-  }
-  .-ml-\[20px\] {
-    margin-left: calc(20px * -1);
   }
   .flex {
     display: flex;
@@ -290,23 +299,11 @@
   .h-0\.5 {
     height: calc(var(--spacing) * 0.5);
   }
-  .h-1 {
-    height: calc(var(--spacing) * 1);
-  }
-  .h-\[1px\] {
-    height: 1px;
-  }
-  .h-\[2px\] {
-    height: 2px;
-  }
   .h-\[15px\] {
     height: 15px;
   }
   .h-\[32px\] {
     height: 32px;
-  }
-  .h-\[50px\] {
-    height: 50px;
   }
   .h-\[60px\] {
     height: 60px;
@@ -323,6 +320,9 @@
   .h-\[293px\] {
     height: 293px;
   }
+  .h-\[304px\] {
+    height: 304px;
+  }
   .h-\[314px\] {
     height: 314px;
   }
@@ -331,6 +331,9 @@
   }
   .h-\[368px\] {
     height: 368px;
+  }
+  .h-\[389px\] {
+    height: 389px;
   }
   .h-\[407px\] {
     height: 407px;
@@ -341,11 +344,11 @@
   .w-0 {
     width: calc(var(--spacing) * 0);
   }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
+  }
   .w-\[15px\] {
     width: 15px;
-  }
-  .w-\[68px\] {
-    width: 68px;
   }
   .w-\[115px\] {
     width: 115px;
@@ -377,20 +380,11 @@
   .w-\[630px\] {
     width: 630px;
   }
-  .w-full {
-    width: 100%;
-  }
   .max-w-\[149px\] {
     max-width: 149px;
   }
   .max-w-\[151px\] {
     max-width: 151px;
-  }
-  .max-w-\[218px\] {
-    max-width: 218px;
-  }
-  .max-w-\[228px\] {
-    max-width: 228px;
   }
   .max-w-\[260px\] {
     max-width: 260px;
@@ -407,26 +401,72 @@
   .max-w-\[432px\] {
     max-width: 432px;
   }
+  .max-w-\[450px\] {
+    max-width: 450px;
+  }
+  .max-w-\[475px\] {
+    max-width: 475px;
+  }
   .max-w-\[983px\] {
     max-width: 983px;
   }
-  .max-w-\[px\] {
-    max-width: px;
+  .max-w-\[1440px\] {
+    max-width: 1440px;
   }
   .border-collapse {
     border-collapse: collapse;
   }
+  .-translate-1 {
+    --tw-translate-x: calc(var(--spacing) * -1);
+    --tw-translate-y: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-1\/2 {
+    --tw-translate-x: calc(calc(1/2 * 100%) * -1);
+    --tw-translate-y: calc(calc(1/2 * 100%) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-1 {
+    --tw-translate-x: calc(var(--spacing) * 1);
+    --tw-translate-y: calc(var(--spacing) * 1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-1\/2 {
+    --tw-translate-x: calc(1/2 * 100%);
+    --tw-translate-y: calc(1/2 * 100%);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-1 {
+    --tw-translate-y: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-1\/2 {
+    --tw-translate-y: calc(calc(1/2 * 100%) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
   .resize {
     resize: both;
+  }
+  .grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
   .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
+  .grid-cols-\[50\%_50\%\] {
+    grid-template-columns: 50% 50%;
+  }
+  .grid-cols-\[auto_851px\] {
+    grid-template-columns: auto 851px;
+  }
+  .grid-cols-\[auto_\] {
+    grid-template-columns: auto ;
+  }
+  .grid-rows-3 {
+    grid-template-rows: repeat(3, minmax(0, 1fr));
+  }
   .flex-col {
     flex-direction: column;
-  }
-  .items-baseline {
-    align-items: baseline;
   }
   .items-center {
     align-items: center;
@@ -440,6 +480,9 @@
   .justify-center {
     justify-content: center;
   }
+  .justify-end {
+    justify-content: flex-end;
+  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
@@ -452,17 +495,11 @@
   .gap-5 {
     gap: calc(var(--spacing) * 5);
   }
-  .gap-8 {
-    gap: calc(var(--spacing) * 8);
-  }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
   }
   .gap-15 {
     gap: calc(var(--spacing) * 15);
-  }
-  .gap-20 {
-    gap: calc(var(--spacing) * 20);
   }
   .gap-30 {
     gap: calc(var(--spacing) * 30);
@@ -470,8 +507,23 @@
   .gap-\[36px\] {
     gap: 36px;
   }
+  .gap-x-15 {
+    column-gap: calc(var(--spacing) * 15);
+  }
+  .gap-x-20 {
+    column-gap: calc(var(--spacing) * 20);
+  }
+  .gap-x-24 {
+    column-gap: calc(var(--spacing) * 24);
+  }
+  .gap-x-25 {
+    column-gap: calc(var(--spacing) * 25);
+  }
   .gap-x-\[168px\] {
     column-gap: 168px;
+  }
+  .gap-y-5 {
+    row-gap: calc(var(--spacing) * 5);
   }
   .gap-y-\[29px\] {
     row-gap: 29px;
@@ -492,6 +544,9 @@
   .bg-\[\#FFFFFF\] {
     background-color: #FFFFFF;
   }
+  .bg-\[\#\] {
+    background-color: #;
+  }
   .bg-black {
     background-color: var(--color-black);
   }
@@ -504,11 +559,41 @@
       background-color: color-mix(in oklab, var(--color-white) 70%, transparent);
     }
   }
+  .bg-gradient-to-r {
+    --tw-gradient-position: to right in oklab;
+    background-image: linear-gradient(var(--tw-gradient-stops));
+  }
+  .bg-\[url\(\.\.\/assets\/section-banner\.png\)\] {
+    background-image: url(../assets/section-banner.png);
+  }
+  .from-\[\#DD3142\] {
+    --tw-gradient-from: #DD3142;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-\[\#C4C4C4\]\/20 {
+    --tw-gradient-to: color-mix(in oklab, #C4C4C4 20%, transparent);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .bg-cover {
+    background-size: cover;
+  }
+  .bg-center {
+    background-position: center;
+  }
   .p-1 {
     padding: calc(var(--spacing) * 1);
   }
   .p-3 {
     padding: calc(var(--spacing) * 3);
+  }
+  .p-10 {
+    padding: calc(var(--spacing) * 10);
+  }
+  .p-12 {
+    padding: calc(var(--spacing) * 12);
+  }
+  .p-13 {
+    padding: calc(var(--spacing) * 13);
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
@@ -519,6 +604,9 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
+  .py-10 {
+    padding-block: calc(var(--spacing) * 10);
+  }
   .py-\[16px\] {
     padding-block: 16px;
   }
@@ -527,6 +615,9 @@
   }
   .py-\[38px\] {
     padding-block: 38px;
+  }
+  .py-\[42px\] {
+    padding-block: 42px;
   }
   .py-\[56px\] {
     padding-block: 56px;
@@ -540,8 +631,8 @@
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
   }
-  .pt-\[6\] {
-    padding-top: 6;
+  .pt-6 {
+    padding-top: calc(var(--spacing) * 6);
   }
   .pt-\[9px\] {
     padding-top: 9px;
@@ -552,20 +643,8 @@
   .pt-\[18px\] {
     padding-top: 18px;
   }
-  .pt-\[20px\] {
-    padding-top: 20px;
-  }
-  .pt-\[22px\] {
-    padding-top: 22px;
-  }
-  .pt-\[25px\] {
-    padding-top: 25px;
-  }
   .pt-\[27px\] {
     padding-top: 27px;
-  }
-  .pt-\[30px\] {
-    padding-top: 30px;
   }
   .pt-\[40px\] {
     padding-top: 40px;
@@ -576,6 +655,9 @@
   .pt-\[43px\] {
     padding-top: 43px;
   }
+  .pt-\[46px\] {
+    padding-top: 46px;
+  }
   .pt-\[63px\] {
     padding-top: 63px;
   }
@@ -585,17 +667,17 @@
   .pt-\[87px\] {
     padding-top: 87px;
   }
+  .pt-\[106px\] {
+    padding-top: 106px;
+  }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
   }
-  .pb-\[7px\] {
-    padding-bottom: 7px;
-  }
-  .pb-\[10px\] {
-    padding-bottom: 10px;
-  }
   .pb-\[12px\] {
     padding-bottom: 12px;
+  }
+  .pb-\[14px\] {
+    padding-bottom: 14px;
   }
   .pb-\[50px\] {
     padding-bottom: 50px;
@@ -675,6 +757,10 @@
     --tw-leading: 133%;
     line-height: 133%;
   }
+  .font-black {
+    --tw-font-weight: var(--font-weight-black);
+    font-weight: var(--font-weight-black);
+  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
@@ -703,6 +789,9 @@
   }
   .text-\[\#DD3142\] {
     color: #DD3142;
+  }
+  .text-\[\#EEFF06\] {
+    color: #EEFF06;
   }
   .text-white {
     color: var(--color-white);
@@ -772,10 +861,72 @@
   --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
   box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
 }
+.peragraph {
+  --tw-leading: 133%;
+  line-height: 133%;
+  color: #6D6D6D;
+}
+@property --tw-translate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
 @property --tw-border-style {
   syntax: "*";
   inherits: false;
   initial-value: solid;
+}
+@property --tw-gradient-position {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-via {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-to {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-via-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 0%;
+}
+@property --tw-gradient-via-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 50%;
+}
+@property --tw-gradient-to-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 100%;
 }
 @property --tw-leading {
   syntax: "*";
@@ -866,7 +1017,19 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-translate-x: 0;
+      --tw-translate-y: 0;
+      --tw-translate-z: 0;
       --tw-border-style: solid;
+      --tw-gradient-position: initial;
+      --tw-gradient-from: #0000;
+      --tw-gradient-via: #0000;
+      --tw-gradient-to: #0000;
+      --tw-gradient-stops: initial;
+      --tw-gradient-via-stops: initial;
+      --tw-gradient-from-position: 0%;
+      --tw-gradient-via-position: 50%;
+      --tw-gradient-to-position: 100%;
       --tw-leading: initial;
       --tw-font-weight: initial;
       --tw-tracking: initial;
