--- a/src/output.css
+++ b/src/output.css
@@ -212,18 +212,6 @@
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
-  .left-1 {
-    left: calc(var(--spacing) * 1);
-  }
-  .left-1\/2 {
-    left: calc(1/2 * 100%);
-  }
-  .left-125 {
-    left: calc(var(--spacing) * 125);
-  }
-  .left-auto {
-    left: auto;
-  }
   .z-10 {
     z-index: 10;
   }
@@ -317,6 +305,9 @@
   .h-\[255px\] {
     height: 255px;
   }
+  .h-\[280px\] {
+    height: 280px;
+  }
   .h-\[293px\] {
     height: 293px;
   }
@@ -344,11 +335,11 @@
   .w-0 {
     width: calc(var(--spacing) * 0);
   }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
-  }
   .w-\[15px\] {
     width: 15px;
+  }
+  .w-\[78px\] {
+    width: 78px;
   }
   .w-\[115px\] {
     width: 115px;
@@ -361,6 +352,9 @@
   }
   .w-\[262px\] {
     width: 262px;
+  }
+  .w-\[280px\] {
+    width: 280px;
   }
   .w-\[302px\] {
     width: 302px;
@@ -386,6 +380,9 @@
   .max-w-\[151px\] {
     max-width: 151px;
   }
+  .max-w-\[247px\] {
+    max-width: 247px;
+  }
   .max-w-\[260px\] {
     max-width: 260px;
   }
@@ -404,8 +401,8 @@
   .max-w-\[450px\] {
     max-width: 450px;
   }
-  .max-w-\[475px\] {
-    max-width: 475px;
+  .max-w-\[728px\] {
+    max-width: 728px;
   }
   .max-w-\[983px\] {
     max-width: 983px;
@@ -415,26 +412,6 @@
   }
   .border-collapse {
     border-collapse: collapse;
-  }
-  .-translate-1 {
-    --tw-translate-x: calc(var(--spacing) * -1);
-    --tw-translate-y: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-1\/2 {
-    --tw-translate-x: calc(calc(1/2 * 100%) * -1);
-    --tw-translate-y: calc(calc(1/2 * 100%) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-1 {
-    --tw-translate-x: calc(var(--spacing) * 1);
-    --tw-translate-y: calc(var(--spacing) * 1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-1\/2 {
-    --tw-translate-x: calc(1/2 * 100%);
-    --tw-translate-y: calc(1/2 * 100%);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-1 {
     --tw-translate-y: calc(var(--spacing) * -1);
@@ -453,14 +430,8 @@
   .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
-  .grid-cols-\[50\%_50\%\] {
-    grid-template-columns: 50% 50%;
-  }
   .grid-cols-\[auto_851px\] {
     grid-template-columns: auto 851px;
-  }
-  .grid-cols-\[auto_\] {
-    grid-template-columns: auto ;
   }
   .grid-rows-3 {
     grid-template-rows: repeat(3, minmax(0, 1fr));
@@ -504,29 +475,20 @@
   .gap-30 {
     gap: calc(var(--spacing) * 30);
   }
+  .gap-\[17px\] {
+    gap: 17px;
+  }
   .gap-\[36px\] {
     gap: 36px;
-  }
-  .gap-x-15 {
-    column-gap: calc(var(--spacing) * 15);
-  }
-  .gap-x-20 {
-    column-gap: calc(var(--spacing) * 20);
-  }
-  .gap-x-24 {
-    column-gap: calc(var(--spacing) * 24);
-  }
-  .gap-x-25 {
-    column-gap: calc(var(--spacing) * 25);
   }
   .gap-x-\[168px\] {
     column-gap: 168px;
   }
-  .gap-y-5 {
-    row-gap: calc(var(--spacing) * 5);
-  }
   .gap-y-\[29px\] {
     row-gap: 29px;
+  }
+  .rounded-full {
+    border-radius: calc(infinity * 1px);
   }
   .rounded-md {
     border-radius: var(--radius-md);
@@ -543,9 +505,6 @@
   }
   .bg-\[\#FFFFFF\] {
     background-color: #FFFFFF;
-  }
-  .bg-\[\#\] {
-    background-color: #;
   }
   .bg-black {
     background-color: var(--color-black);
@@ -586,12 +545,6 @@
   .p-3 {
     padding: calc(var(--spacing) * 3);
   }
-  .p-10 {
-    padding: calc(var(--spacing) * 10);
-  }
-  .p-12 {
-    padding: calc(var(--spacing) * 12);
-  }
   .p-13 {
     padding: calc(var(--spacing) * 13);
   }
@@ -622,6 +575,9 @@
   .py-\[56px\] {
     padding-block: 56px;
   }
+  .py-\[60px\] {
+    padding-block: 60px;
+  }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
   }
@@ -642,6 +598,9 @@
   }
   .pt-\[18px\] {
     padding-top: 18px;
+  }
+  .pt-\[25px\] {
+    padding-top: 25px;
   }
   .pt-\[27px\] {
     padding-top: 27px;
@@ -678,6 +637,9 @@
   }
   .pb-\[14px\] {
     padding-bottom: 14px;
+  }
+  .pb-\[18px\] {
+    padding-bottom: 18px;
   }
   .pb-\[50px\] {
     padding-bottom: 50px;
@@ -757,6 +719,10 @@
     --tw-leading: 133%;
     line-height: 133%;
   }
+  .leading-\[133\.5\%\] {
+    --tw-leading: 133.5%;
+    line-height: 133.5%;
+  }
   .font-black {
     --tw-font-weight: var(--font-weight-black);
     font-weight: var(--font-weight-black);
@@ -787,6 +753,9 @@
   .text-\[\#6D6D6D\] {
     color: #6D6D6D;
   }
+  .text-\[\#6D6D6\] {
+    color: #6D6D6;
+  }
   .text-\[\#DD3142\] {
     color: #DD3142;
   }
@@ -801,6 +770,10 @@
   }
   .underline {
     text-decoration-line: underline;
+  }
+  .shadow-md {
+    --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .outline {
     outline-style: var(--tw-outline-style);
@@ -940,15 +913,6 @@
   syntax: "*";
   inherits: false;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
-@property --tw-duration {
-  syntax: "*";
-  inherits: false;
-}
 @property --tw-shadow {
   syntax: "*";
   inherits: false;
@@ -1014,6 +978,15 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -1033,8 +1006,6 @@
       --tw-leading: initial;
       --tw-font-weight: initial;
       --tw-tracking: initial;
-      --tw-outline-style: solid;
-      --tw-duration: initial;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
       --tw-shadow-alpha: 100%;
@@ -1049,6 +1020,8 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
+      --tw-duration: initial;
     }
   }
 }
