Add testimonial section and apply slider

--- a/src/input.css
+++ b/src/input.css
@@ -28,5 +28,5 @@
   @apply text-[#DD3142] underline;
 }
 .contact-input {
-  @apply border-b-2 border-[#707070] w-full py-2 focus:border-0;
+  @apply border-b-1 border-[#707070] w-full py-2 pl-1 focus:border-0;
 }
