--- a/src/output.css
+++ b/src/output.css
@@ -7,6 +7,8 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-200: oklch(88.5% 0.062 18.334);
+    --color-red-600: oklch(57.7% 0.245 27.325);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -28,6 +30,7 @@
     --tracking-tighter: -0.05em;
     --radius-sm: 0.25rem;
     --radius-md: 0.375rem;
+    --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -182,14 +185,29 @@
   }
 }
 @layer utilities {
+  .visible {
+    visibility: visible;
+  }
   .absolute {
     position: absolute;
+  }
+  .fixed {
+    position: fixed;
   }
   .relative {
     position: relative;
   }
+  .static {
+    position: static;
+  }
   .inset-0 {
     inset: calc(var(--spacing) * 0);
+  }
+  .-top-\[51px\] {
+    top: calc(51px * -1);
+  }
+  .top-1 {
+    top: calc(var(--spacing) * 1);
   }
   .top-1\/2 {
     top: calc(1/2 * 100%);
@@ -203,14 +221,20 @@
   .-bottom-10 {
     bottom: calc(var(--spacing) * -10);
   }
-  .-left-\[270px\] {
-    left: calc(270px * -1);
+  .-left-\[268px\] {
+    left: calc(268px * -1);
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
+  .-z-10 {
+    z-index: calc(10 * -1);
+  }
   .z-10 {
     z-index: 10;
+  }
+  .z-20 {
+    z-index: 20;
   }
   .col-span-full {
     grid-column: 1 / -1;
@@ -242,11 +266,35 @@
   .my-\[76px\] {
     margin-block: 76px;
   }
+  .-mt-2 {
+    margin-top: calc(var(--spacing) * -2);
+  }
   .-mt-3 {
     margin-top: calc(var(--spacing) * -3);
   }
   .-mt-\[10px\] {
     margin-top: calc(10px * -1);
+  }
+  .-mt-\[14px\] {
+    margin-top: calc(14px * -1);
+  }
+  .-mt-\[15px\] {
+    margin-top: calc(15px * -1);
+  }
+  .-mt-\[16px\] {
+    margin-top: calc(16px * -1);
+  }
+  .-mt-\[17px\] {
+    margin-top: calc(17px * -1);
+  }
+  .-mt-\[18px\] {
+    margin-top: calc(18px * -1);
+  }
+  .-mt-\[20px\] {
+    margin-top: calc(20px * -1);
+  }
+  .mt-1 {
+    margin-top: calc(var(--spacing) * 1);
   }
   .mt-\[7px\] {
     margin-top: 7px;
@@ -257,11 +305,11 @@
   .mt-\[33px\] {
     margin-top: 33px;
   }
+  .mt-\[44px\] {
+    margin-top: 44px;
+  }
   .mt-\[45px\] {
     margin-top: 45px;
-  }
-  .mt-\[48px\] {
-    margin-top: 48px;
   }
   .mt-\[100px\] {
     margin-top: 100px;
@@ -278,20 +326,47 @@
   .-ml-\[10px\] {
     margin-left: calc(10px * -1);
   }
+  .block {
+    display: block;
+  }
   .flex {
     display: flex;
   }
   .grid {
     display: grid;
   }
+  .hidden {
+    display: none;
+  }
+  .inline {
+    display: inline;
+  }
+  .inline-block {
+    display: inline-block;
+  }
+  .table {
+    display: table;
+  }
+  .h-0 {
+    height: calc(var(--spacing) * 0);
+  }
   .h-0\.5 {
     height: calc(var(--spacing) * 0.5);
+  }
+  .h-4 {
+    height: calc(var(--spacing) * 4);
   }
   .h-\[15px\] {
     height: 15px;
   }
   .h-\[32px\] {
     height: 32px;
+  }
+  .h-\[36px\] {
+    height: 36px;
+  }
+  .h-\[52px\] {
+    height: 52px;
   }
   .h-\[60px\] {
     height: 60px;
@@ -320,6 +395,9 @@
   .h-\[341px\] {
     height: 341px;
   }
+  .h-\[354px\] {
+    height: 354px;
+  }
   .h-\[368px\] {
     height: 368px;
   }
@@ -332,8 +410,17 @@
   .h-\[436px\] {
     height: 436px;
   }
+  .min-h-\[297px\] {
+    min-height: 297px;
+  }
+  .min-h-\[316px\] {
+    min-height: 316px;
+  }
   .min-h-\[364px\] {
     min-height: 364px;
+  }
+  .min-h-\[389px\] {
+    min-height: 389px;
   }
   .w-0 {
     width: calc(var(--spacing) * 0);
@@ -347,8 +434,14 @@
   .w-\[115px\] {
     width: 115px;
   }
+  .w-\[146px\] {
+    width: 146px;
+  }
   .w-\[210px\] {
     width: 210px;
+  }
+  .w-\[214px\] {
+    width: 214px;
   }
   .w-\[237px\] {
     width: 237px;
@@ -389,6 +482,21 @@
   .w-\[664px\] {
     width: 664px;
   }
+  .w-\[935px\] {
+    width: 935px;
+  }
+  .w-\[940px\] {
+    width: 940px;
+  }
+  .w-\[950px\] {
+    width: 950px;
+  }
+  .w-\[1070px\] {
+    width: 1070px;
+  }
+  .w-\[1170px\] {
+    width: 1170px;
+  }
   .max-w-\[149px\] {
     max-width: 149px;
   }
@@ -416,6 +524,9 @@
   .max-w-\[377px\] {
     max-width: 377px;
   }
+  .max-w-\[390\] {
+    max-width: 390;
+  }
   .max-w-\[432px\] {
     max-width: 432px;
   }
@@ -428,18 +539,31 @@
   .max-w-\[728px\] {
     max-width: 728px;
   }
+  .max-w-\[931px\] {
+    max-width: 931px;
+  }
   .max-w-\[983px\] {
     max-width: 983px;
   }
   .max-w-\[1070px\] {
     max-width: 1070px;
   }
-  .max-w-\[1440px\] {
-    max-width: 1440px;
+  .border-collapse {
+    border-collapse: collapse;
+  }
+  .-translate-y-1 {
+    --tw-translate-y: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-1\/2 {
     --tw-translate-y: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .transform {
+    transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
+  }
+  .resize {
+    resize: both;
   }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -477,6 +601,9 @@
   .justify-end {
     justify-content: flex-end;
   }
+  .gap-2 {
+    gap: calc(var(--spacing) * 2);
+  }
   .gap-2\.5 {
     gap: calc(var(--spacing) * 2.5);
   }
@@ -498,17 +625,23 @@
   .gap-15 {
     gap: calc(var(--spacing) * 15);
   }
-  .gap-30 {
-    gap: calc(var(--spacing) * 30);
-  }
   .gap-\[17px\] {
     gap: 17px;
   }
-  .gap-\[36px\] {
-    gap: 36px;
+  .gap-\[37px\] {
+    gap: 37px;
   }
-  .gap-x-\[39px\] {
-    column-gap: 39px;
+  .gap-\[41px\] {
+    gap: 41px;
+  }
+  .gap-\[44px\] {
+    gap: 44px;
+  }
+  .gap-\[98px\] {
+    gap: 98px;
+  }
+  .gap-x-\[40px\] {
+    column-gap: 40px;
   }
   .gap-x-\[89px\] {
     column-gap: 89px;
@@ -522,9 +655,6 @@
   .gap-y-\[29px\] {
     row-gap: 29px;
   }
-  .gap-y-\[52px\] {
-    row-gap: 52px;
-  }
   .gap-y-\[60px\] {
     row-gap: 60px;
   }
@@ -537,6 +667,10 @@
   .rounded-sm {
     border-radius: var(--radius-sm);
   }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
   .bg-\[\#DD3142\] {
     background-color: #DD3142;
   }
@@ -548,6 +682,24 @@
   }
   .bg-black {
     background-color: var(--color-black);
+  }
+  .bg-black\/30 {
+    background-color: color-mix(in srgb, #000 30%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-black) 30%, transparent);
+    }
+  }
+  .bg-black\/70 {
+    background-color: color-mix(in srgb, #000 70%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-black) 70%, transparent);
+    }
+  }
+  .bg-red-200 {
+    background-color: var(--color-red-200);
+  }
+  .bg-red-600 {
+    background-color: var(--color-red-600);
   }
   .bg-white {
     background-color: var(--color-white);
@@ -568,6 +720,9 @@
   .bg-\[url\(\.\.\/assets\/section-banner\.png\)\] {
     background-image: url(../assets/section-banner.png);
   }
+  .bg-\[url\(\.\.\/assets\/testimonial-bg\.jpg\)\] {
+    background-image: url(../assets/testimonial-bg.jpg);
+  }
   .from-\[\#DD3142\] {
     --tw-gradient-from: #DD3142;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
@@ -582,14 +737,17 @@
   .bg-center {
     background-position: center;
   }
-  .p-1 {
-    padding: calc(var(--spacing) * 1);
-  }
-  .p-3 {
-    padding: calc(var(--spacing) * 3);
+  .bg-no-repeat {
+    background-repeat: no-repeat;
   }
   .p-13 {
     padding: calc(var(--spacing) * 13);
+  }
+  .px-2 {
+    padding-inline: calc(var(--spacing) * 2);
+  }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
   }
   .py-2\.5 {
     padding-block: calc(var(--spacing) * 2.5);
@@ -609,14 +767,8 @@
   .py-\[33px\] {
     padding-block: 33px;
   }
-  .py-\[38px\] {
-    padding-block: 38px;
-  }
   .py-\[42px\] {
     padding-block: 42px;
-  }
-  .py-\[56px\] {
-    padding-block: 56px;
   }
   .py-\[60px\] {
     padding-block: 60px;
@@ -633,9 +785,6 @@
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
   }
-  .pt-8 {
-    padding-top: calc(var(--spacing) * 8);
-  }
   .pt-12 {
     padding-top: calc(var(--spacing) * 12);
   }
@@ -651,11 +800,17 @@
   .pt-\[19px\] {
     padding-top: 19px;
   }
+  .pt-\[20px\] {
+    padding-top: 20px;
+  }
   .pt-\[25px\] {
     padding-top: 25px;
   }
   .pt-\[27px\] {
     padding-top: 27px;
+  }
+  .pt-\[35px\] {
+    padding-top: 35px;
   }
   .pt-\[37px\] {
     padding-top: 37px;
@@ -669,8 +824,14 @@
   .pt-\[43px\] {
     padding-top: 43px;
   }
+  .pt-\[45px\] {
+    padding-top: 45px;
+  }
   .pt-\[46px\] {
     padding-top: 46px;
+  }
+  .pt-\[56px\] {
+    padding-top: 56px;
   }
   .pt-\[63px\] {
     padding-top: 63px;
@@ -690,8 +851,14 @@
   .pt-\[106px\] {
     padding-top: 106px;
   }
+  .pr-3 {
+    padding-right: calc(var(--spacing) * 3);
+  }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
+  }
+  .pb-3 {
+    padding-bottom: calc(var(--spacing) * 3);
   }
   .pb-\[5px\] {
     padding-bottom: 5px;
@@ -732,6 +899,9 @@
   .font-hero {
     font-family: var(--font-hero);
   }
+  .font-primary {
+    font-family: var(--font-primary);
+  }
   .text-3xl {
     font-size: var(--text-3xl);
     line-height: var(--tw-leading, var(--text-3xl--line-height));
@@ -764,6 +934,12 @@
   .text-\[18px\] {
     font-size: 18px;
   }
+  .text-\[19px\] {
+    font-size: 19px;
+  }
+  .text-\[20px\] {
+    font-size: 20px;
+  }
   .text-\[30px\] {
     font-size: 30px;
   }
@@ -778,6 +954,14 @@
   }
   .text-\[44px\] {
     font-size: 44px;
+  }
+  .leading-4 {
+    --tw-leading: calc(var(--spacing) * 4);
+    line-height: calc(var(--spacing) * 4);
+  }
+  .leading-5 {
+    --tw-leading: calc(var(--spacing) * 5);
+    line-height: calc(var(--spacing) * 5);
   }
   .leading-6 {
     --tw-leading: calc(var(--spacing) * 6);
@@ -851,6 +1035,22 @@
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
+  .blur {
+    --tw-blur: blur(8px);
+    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .filter {
+    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .transition {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
   .transition-all {
     transition-property: all;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
@@ -871,6 +1071,14 @@
     &:hover {
       @media (hover: hover) {
         cursor: pointer;
+      }
+    }
+  }
+  .hover\:border-1 {
+    &:hover {
+      @media (hover: hover) {
+        border-style: var(--tw-border-style);
+        border-width: 1px;
       }
     }
   }
@@ -929,9 +1137,10 @@
 .contact-input {
   width: 100%;
   border-bottom-style: var(--tw-border-style);
-  border-bottom-width: 2px;
+  border-bottom-width: 1px;
   border-color: #707070;
   padding-block: calc(var(--spacing) * 2);
+  padding-left: calc(var(--spacing) * 1);
   &:focus {
     border-style: var(--tw-border-style);
     border-width: 0px;
@@ -951,6 +1160,31 @@
   syntax: "*";
   inherits: false;
   initial-value: 0;
+}
+@property --tw-rotate-x {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-rotate-y {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-rotate-z {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-skew-x {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-skew-y {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
 }
 @property --tw-gradient-position {
   syntax: "*";
@@ -1071,14 +1305,67 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-duration {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-border-style {
+@property --tw-outline-style {
   syntax: "*";
   inherits: false;
   initial-value: solid;
+}
+@property --tw-blur {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-brightness {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-contrast {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-grayscale {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-hue-rotate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-invert {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-opacity {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-saturate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-sepia {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow-alpha {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
+@property --tw-drop-shadow-size {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
 }
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
@@ -1086,6 +1373,12 @@
       --tw-translate-x: 0;
       --tw-translate-y: 0;
       --tw-translate-z: 0;
+      --tw-rotate-x: initial;
+      --tw-rotate-y: initial;
+      --tw-rotate-z: initial;
+      --tw-skew-x: initial;
+      --tw-skew-y: initial;
+      --tw-border-style: solid;
       --tw-gradient-position: initial;
       --tw-gradient-from: #0000;
       --tw-gradient-via: #0000;
@@ -1112,8 +1405,21 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
+      --tw-blur: initial;
+      --tw-brightness: initial;
+      --tw-contrast: initial;
+      --tw-grayscale: initial;
+      --tw-hue-rotate: initial;
+      --tw-invert: initial;
+      --tw-opacity: initial;
+      --tw-saturate: initial;
+      --tw-sepia: initial;
+      --tw-drop-shadow: initial;
+      --tw-drop-shadow-color: initial;
+      --tw-drop-shadow-alpha: 100%;
+      --tw-drop-shadow-size: initial;
       --tw-duration: initial;
-      --tw-border-style: solid;
     }
   }
 }
